2011-07-10  Matevz Tadel  <matevz.tadel@ijs.si>

	* Glasses/LegendreCoefs.cxx:
	* Glasses/LegendreCoefs.h:
	New glass - contains a set of coefficients for associated Legendre
	polynoms.
	Provide different evaluation methods using GSL functions.
	Can read EGM 2008 data and generate reasonably looking Earth.

	Still need to figure out some details with normalization.

	* glass.list:
	Register LegendreCoefs.

2011-06-18  Matevz Tadel  <matevz.tadel@ijs.si>

	* Glasses/Moonraker.cxx:
	* Glasses/Moonraker.h:
	* Glasses/ODECrawler.cxx:
	* Glasses/ODECrawler.h:
	* Rnr/GL/Moonraker_GL_Rnr.cxx:
	Get rid of TVector3 and TVectorT from ODECrawler and friends.

2011-03-06  Matevz Tadel  <matevz.tadel@ijs.si>

	Use GSL for ODE integration. This adds dependency on gsl library.

	* Makefile:
	Link against libgsl.

	* Glasses/ODECrawler.cxx:
	* Glasses/ODECrawler.h:
	Remove old code, wrap around gsl_odeiv interface.
	This also required a change ODECrawlerMaster prototypes - raw
	double arrays are now passed in.

	* Glasses/Moonraker.cxx:
	* Glasses/Moonraker.h:
	Follow-up on changes in OdeCrawler.

2010-10-17  Matevz Tadel  <matevz.tadel@ijs.si>

	* Glasses/MultiSpheror.cxx:
	* Glasses/MultiSpheror.h:
	* Glasses/WarmAmoeba.cxx:
	* Glasses/WarmAmoeba.h:
	Add includes missing after GledCore cleanup.

2010-04-06  Matevz Tadel  <matevz.tadel@ijs.si>

	* Glasses/Moonraker.cxx:
	* Glasses/Moonraker.h:
	Replace usage of TVector3 with ZPoint.

2009-05-17  Matevz Tadel  <matevz.tadel@ijs.si>

	Mac compilation changes.

	* Glasses/ODECrawler.h:
	Explicit template instantiation causes trouble on mac.
	Need to see with Axel.

2009-04-26  Matevz Tadel  <matevz.tadel@ijs.si>

	* Rnr/GL/Moonraker_GL_Rnr.h:
	Do not include glu.h - done by glew.h.

2009-04-13  Matevz Tadel  <matevz.tadel@ijs.si>

	* Glasses/ODECrawler.h:
	Fix for changes in L{aA} p7 pragma.

	* glass.list:
	Fix for new render-class specification.

2009-02-26  Matevz Tadel  <matevz.tadel@ijs.si>

	* Glasses/ODECrawler.cxx: